# RestartSQP

./: .clang-format  .codecov.yml  .travis.yml  CMakeLists.txt  INSTALL  README.md
cmake/: ExternalQPOASES.cmake  FindAMD.cmake  FindCPLEX.cmake  FindGUROBI.cmake  FindIPOPT.cmake  FindQORE.cmake  FindQPOASES.cmake  FindUFCONFIG.cmake  FindUMFPACK.cmake
include/: Algorithm.hpp  Matrix.hpp  MyNLP.hpp  QPsolverInterface.hpp  SQPTNLP.hpp  Stats.hpp  Types.hpp  Utils.hpp
include/restartsqp/: CInterface.h  CInterfaceTNlp.hpp  CplexInterface.hpp  CrossoverSqpSolver.hpp  CrossoverSqpTNlp.hpp  GurobiInterface.hpp  IpoptSqpNlp.hpp  IpoptSqpTNlp.hpp  LazySqpSolver.hpp  LazySqpTNlp.hpp  MessageHandling.hpp  QoreInterface.hpp  QpHandler.hpp  QpOasesInterface.hpp  QpSolverInterface.hpp  ReturnCodes.h  SparseHbMatrix.hpp  SparseTripletMatrix.hpp  SqpInitSolveTNlp.hpp  SqpIpoptNlp.hpp  SqpIpoptTNlp.hpp  SqpNlp.hpp  SqpSolver.hpp  SqpTNlp.hpp  Statistics.hpp  Types.hpp  Utils.hpp  Vector.hpp
include/sqphot/: Algorithm.hpp  CplexInterface.hpp  CrossoverSqpSolver.hpp  GurobiInterface.hpp  IpoptSqpNlp.hpp  LPhandler.hpp  LazySqpSolver.hpp  LazySqpTNlp.hpp  Log.hpp  Matrix.hpp  MessageHandling.hpp  MyNLP.hpp  OptTest.hpp  Options.hpp  QOREInterface.hpp  QPhandler.hpp  QPsolverInterface.hpp  QoreInterface.hpp  QpHandler.hpp  QpOasesInterface.hpp  QpSolverInterface.hpp  SQPDebug.h  SQPDebug.hpp  SQPTNLP.hpp  ShortenedSqpTNlp.hpp  SpHbMat.hpp  SpTripletMat.hpp  SparseHbMatrix.hpp  SparseTripletMatrix.hpp  SqpAlgorithm.hpp  SqpInitSolveTNlp.hpp  SqpIpoptNlp.hpp  SqpNlp.hpp  SqpNlpBase.hpp  SqpRestartSolver.hpp  SqpSolver.hpp  SqpTNlp.hpp  Statistics.hpp  Stats.hpp  Types.hpp  (+3 more)
interfaces/AmplInterface/: CMakeLists.txt  IpoptAmplTNlp.cpp  IpoptAmplTNlp.hpp  SqpAmplTNlp.hpp  crossoversqp_ampl.cpp
src/: .gitignore  Algorithm.cpp  Algorithm.hpp  CInterface.cpp  CInterfaceTNlp.cpp  CMakeLists.txt  CplexInterface.cpp  CrossoverSqpSolver.cpp  CrossoverSqpTNlp.cpp  GurobiInterface.cpp  IpoptSqpNlp.cpp  IpoptSqpTNlp.cpp  LPhandler.cpp  LazySqpSolver.cpp  LazySqpTNlp.cpp  Log.hpp  Makefile  Matrix.cpp  Matrix.hpp  MyNLP.cpp  MyNLP.hpp  OptTest.cpp  Options.cpp  Options.hpp  QOREInterface.cpp  QPhandler.cpp  QPhandler.hpp  QPsolver.cpp  QPsolver.hpp  QPsolverInterface.cpp  QPsolverInterface.hpp  QoreInterface.cpp  QpHandler.cpp  QpOasesInterface.cpp  QpSolverInterface.cpp  SQPTNLP.cpp  SQPTNLP.hpp  ShortenedSqpTNlp.cpp  SpHbMat.cpp  SpTripletMat.cpp  (+15 more)
test/: CMakeLists.txt  QPsolvers_testers.cpp  lazy_sqp_ampl.cpp  run71_end.sh  run_1_70.sh  runhs.sh  runtest.sh  simple_test.cpp  sqp_ampl.cpp  sqp_restart_ampl.cpp
test/CUTE_examples/: 3pk.nl  Plist.cute_all_nopres  aircrfta.nl  aircrftb.nl  airport.nl  aljazzaf.nl  all.out  allinit.nl  allinitc.nl  allinitu.nl  alsotame.nl  argauss.nl  arglina.nl  arglinb.nl  arglinc.nl  argtrig.nl  artif.nl  arwhead.nl  aug2d.nl  aug2dc.nl  aug2dcqp.nl  aug2dqp.nl  aug3d.nl  aug3dc.nl  aug3dcqp.nl  aug3dqp.nl  avgasa.nl  avgasb.nl  avion2.nl  back.m  backtest.m  bard.nl  batch.nl  bdexp.nl  bdqrtic.nl  bdvalue.nl  beale.nl  bigbank.nl  biggs3.nl  biggs5.nl  (+611 more)
test/CUTE_examples/HS/: hs001.nl  hs003.nl  hs004.nl  hs005.nl  hs008.nl  hs009.nl  hs011.nl  hs013.nl  hs014.nl  hs015.nl  hs016.nl  hs017.nl  hs022.nl  hs025.nl  hs027.nl  hs028.nl  hs030.nl  hs031.nl  hs034.nl  hs035.nl  hs036.nl  hs037.nl  hs038.nl  hs039.nl  hs041.nl  hs042.nl  hs045.nl  hs046.nl  hs047.nl  hs048.nl  hs049.nl  hs050.nl  hs051.nl  hs052.nl  hs053.nl  hs054.nl  hs055.nl  hs056.nl  hs061.nl  hs062.nl  (+46 more)
test/hs071_c/: hs071_c.c
test/hs071_lazy/: hs071_main.cpp  hs071_nlp.cpp  hs071_nlp.hpp
test/unitTest/: test_SpHbMat.cpp  test_SpTripletMat.cpp  unit_test_utils.hpp
test/unsolved_QPs/: hs034.cpp  hs034.hpp  hs035.cpp  hs035_unbounded.hpp  hs039.cpp  hs039.hpp  hs046.cpp  hs046.hpp  hs047.cpp  hs047.hpp  hs062.hpp  hs066.cpp  hs066.hpp  hs067.cpp  hs067_unbounded.hpp  hs070.cpp  hs070.hpp
