file(GLOB HEADERS *.hpp ${PROJECT_INCLUDE_DIR}/restartsqp/*.hpp)
file(GLOB SOURCES *.cpp ${PROJECT_SRC_DIR}/src/*.cpp)

add_library(restartsqp STATIC ${SOURCES} ${HEADERS})
#add_library(restartsqp SHARED ${SOURCES} ${HEADERS})

#target_link_libraries(restartsqp)

SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE) 
SET(CMAKE_INSTALL_RPATH "${PROJ_LIB_DIR}")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)


# file(GLOB SQPHOTSTART_SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)

